data can be passed from react to api

--- a/api/templates/signup.html
+++ b/api/templates/signup.html
@@ -7,7 +7,7 @@
 {% block body %}
 
     <h2>Sign UP page</h2>
-    <form action='/signup', method="post">
+    <form action='/signup_button', method="post">
         <input name="username" placeholder="Enter Username" type="text"><br>
         <input name="full_name" placeholder="Enter Full Name" type="text"><br>
         <input name="email" placeholder="Enter Email ID" type="text"><br>
