--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -1,2 +1,14 @@
 {% extends "layout.html" %}
 
+{% block body %}
+    <h2>Home page </h2>
+
+    <form action='/search_button' method="POST">
+        <input type="text" name="q">
+        <input type="submit" value="search">
+    </form>
+
+    <a href="signup">signup here</a>
+    <a href="sell">sell here</a>
+
+{% endblock %}
