--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -8,6 +8,7 @@
         <input type="submit" value="search">
     </form>
 
+    <a href="signin">signin here</a><br>
     <a href="signup">signup here</a><br>
     <a href="sell">sell here</a><br>
     To see all users <a href="users">Click here</a><br>
