Added sign-in session

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -11,6 +11,8 @@
     <a href="signin">signin here</a><br>
     <a href="signup">signup here</a><br>
     <a href="sell">sell here</a><br>
+    <a href="signout">signout here</a><br>
+    
     To see all users <a href="users">Click here</a><br>
 
 {% endblock %}
