--- a/api/templates/signin.html
+++ b/api/templates/signin.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block body %}
+    <h2>Sign in Page</h2>
     <form action="/signin_button" method="POST">
         <input type="text" name="email" placeholder="Enter Email"><br>
         <input type="password" name="password" placeholder="Enter Password"><br>
