--- a/src/components/home/styles.module.scss
+++ b/src/components/home/styles.module.scss
@@ -1,3 +1,34 @@
 .home{
-    
+    width: 100vw;
+    overflow-x: hidden;
+    .hero{
+        width: 100vw;
+        display: flex;
+        justify-content: space-between;
+        background-image: url('../../assets/bg/bg.png');
+        background-repeat: no-repeat; /* Do not repeat the image */
+        background-size: cover;
+        background-position: bottom;
+
+        .title{
+            // padding: 150px 0 0 10vw;
+            // font-family: 'Righteous', cursive;
+            // font-size: 11rem;
+            // color: #3D6CB9;
+            // width: 300px;
+            // height: 300px;
+            
+            width: 838px;
+            height: 234px;
+            padding: 128px 0 0 173px;
+          
+        }
+        .avatar{
+            height: 500px;
+        }
+        // img{
+        //     height: 500px;
+        //     padding-left: 10vw;
+        // }
+    }
 }
