--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -3,6 +3,9 @@
     width: auto;
     padding: 10px 10px;
     // box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0 10px 6px -6px rgb(187, 186, 186);
+	-moz-box-shadow: 0 10px 6px -6px rgb(187, 186, 186);
+	box-shadow: 0 10px 6px -6px rgb(187, 186, 186);
     
 
     nav {
@@ -46,11 +49,13 @@
             }
             .navbarButton{
                 background-color: $blue_button;
+                    
+                    li{
+                        color: white;
                 padding: 8px 15px;
                 margin: 0;
-                a{
-                    color: white;
-                }
+                    }
+                
             }
         }
     }
