--- a/src/components/home/styles.module.scss
+++ b/src/components/home/styles.module.scss
@@ -1,3 +1,4 @@
+@import '../../styles/colors';
 .home{
     width: 100vw;
     overflow-x: hidden;
@@ -30,5 +31,17 @@
         //     height: 500px;
         //     padding-left: 10vw;
         // }
+    }
+
+    .filters{
+        background-color: #F8F8F8;
+        padding: 30px 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+
+        p{
+            padding: 0 10px;
+        }
     }
 }
