--- a/api/templates/search.html
+++ b/api/templates/search.html
@@ -11,11 +11,11 @@
         {% for item in items %}
 
             <li>
-                <h4>{{ item["title"] }}</h4>
-                Description: {{ item["description"] }} <br>
-                Category: {{ item["category"] }} <br>
-                Age: {{ item["year"] }} <br>
-                Selling Price: <b>{{ item["price"] }}</b> <br>
+                <h4>{{ item[1] }}</h4>
+                Description: {{ item[3] }} <br>
+                Category: {{ item[2] }} <br>
+                Age: {{ item[5] }} <br>
+                Selling Price: <b>{{ item[4] }}</b> <br>
 
             </li>
         {% endfor %}
