--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -8,10 +8,11 @@
         <input type="submit" value="search">
     </form>
 
-    <a href="signin">signin here</a><br>
-    <a href="signup">signup here</a><br>
-    <a href="sell">sell here</a><br>
-    <a href="signout">signout here</a><br>
+    <a href="signin">Signin here</a><br>
+    <a href="signup">Signup here</a><br>
+    <a href="sell">Sell here</a><br>
+    <a href="dashboard">Your Dashboard</a><br>
+    <a href="signout">Signout here</a><br>
     
     To see all users <a href="users">Click here</a><br>
 
