Fixed search query

--- a/api/templates/sell.html
+++ b/api/templates/sell.html
@@ -12,8 +12,8 @@
         (get seller_id from current session)<br>
         <input name="title" placeholder="Enter title" type="text"><br>
         <input name="description" placeholder="Enter description" type="text"><br>
-        <input type="radio" name="category" id="book"> Books <br>
-        <input type="radio" name="category"> Electronics <br>
+        <input type="radio" name="category" id="book" value="Book"> Books <br>
+        <input type="radio" name="category" id="electronics" value="Electronics"> Electronics <br>
         <input name="price" placeholder="Enter Selling Price" type="text"><br>
         <input name="year" placeholder="Enter year(how old is the item)" type="text"><br>
 
