--- a/api/templates/search.html
+++ b/api/templates/search.html
@@ -11,11 +11,10 @@
         {% for item in items %}
 
             <li>
-                <h4>{{ item[1] }}</h4>
-                Description: {{ item[3] }} <br>
+
+                <b><a style="color:inherit;text-decoration: none" href="/product/{{ item[0] }}">{{ item[1] }}</b>
                 Category: {{ item[2] }} <br>
-                Age: {{ item[5] }} <br>
-                Selling Price: <b>{{ item[4] }}</b> <br>
+                Selling Price: <b>{{ item[4] }}</b></a> <br><br>
 
             </li>
         {% endfor %}
