--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,4 +1,3 @@
-
 @import './styles/colors';
 
 * {
@@ -7,7 +6,7 @@
   border: 0;
   outline: 0;
   font-size: 100%;
-  background: transparent;
+  // background: transparent;
 }
 
 body {
