--- a/src/components/home/styles.module.scss
+++ b/src/components/home/styles.module.scss
@@ -47,4 +47,38 @@
             }
        }
     }
+
+    .cards{
+        padding: 10px 15px;
+        display: grid;
+        justify-content: center;
+        grid-template-columns: repeat(5,1fr);
+        row-gap: 30px;
+        column-gap: 10px;
+
+        .card{
+            background-color: white;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            border-radius: 10px;
+            width: max-content;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 10px auto;
+
+            .productImage{
+                margin: 20px 10px;
+                width: 300px;
+            }
+            .productTitle{
+                color: $purple;
+                font-size: 1.2rem;
+                font-weight: 500;
+            }
+            .productPrice{
+                font-weight: 400;
+                padding: 20px 0;
+            }
+        }
+    }
 }
