--- a/src/components/search/styles.module.scss
+++ b/src/components/search/styles.module.scss
@@ -30,6 +30,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                margin: 0 auto;
 
     
                 .productImage{
