--- a/src/components/productPage/styles.module.scss
+++ b/src/components/productPage/styles.module.scss
@@ -46,9 +46,12 @@
                 flex-direction: column;
                 align-items: center;
                 width: 37%;
+                margin-top: 60px;
+                margin-bottom: 100px;
 
                 .sellerTag{
                     color: $accent_blue;
+                    align-self: start;
                 }
                 
                 .sellerProfile{
@@ -85,12 +88,33 @@
                     }
 
                 }
+                .contactSeller{
+                    display: flex;
+                    flex-direction: row;
+                    background-color: white;
+                    width: 50%;
+                    justify-content: baseline;
+                    margin-top: 20px;
+
+                    .contactIcon{
+                        background-color: $accent_blue;
+                        width: 27px;
+                        height: 27px;
+                        padding: 9px 5px 7px 7px;
+                    }
+                    .contactText{
+                        color: $purple;
+                        font-size: 1.1rem;
+                        padding: 10px 5px;
+                    }
+                }
             }
         }
         .right{
             .image{
                 width: 400px;
                 max-width: 500px;
+                margin: 220px 100px 0 185px;
             }
         }
     }
