--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -13,9 +13,14 @@
         flex-direction: row;
         justify-content: space-between;
 
-        p{
-            padding-left: 10px ;
-            font-size: 1.5rem;
+        a{
+            text-decoration: none;
+            color: black;
+
+            p{
+                padding-left: 10px ;
+                font-size: 1.5rem;
+            }
         }
         .search{
             display: flex;
