--- a/src/components/productPage/styles.module.scss
+++ b/src/components/productPage/styles.module.scss
@@ -6,6 +6,7 @@
         display: flex;
         flex-direction: row;
         padding: 100px 0 0 0 ;
+        min-height: 84vh;
 
         .left{
             padding: 50px 0 0 100px;
@@ -80,8 +81,20 @@
                     justify-content: space-between;
                     margin-top: 20px;
 
+                    .ratingNumber{
+                        margin-right: 5px;
+                        .ratingStar{
+                            width: 17px;
+                            margin: 0 1px;
+                        }
+                    }
                     .reviewStar{
                         padding: 0 10px;
+                        
+                        .ratingStar{
+                            width: 17px;
+                            margin: 0 1px;
+                        }
                     }
                     .reviewValue{
                         padding: 0 10px;
