--- a/src/components/search/styles.module.scss
+++ b/src/components/search/styles.module.scss
@@ -22,6 +22,7 @@
             grid-template-columns: repeat(5,1fr);
             row-gap: 30px;
             column-gap: 10px;
+            min-height: 80vh;
             
             a{
                 text-decoration: none;
