--- a/src/components/sell/styles.module.scss
+++ b/src/components/sell/styles.module.scss
@@ -31,6 +31,10 @@
             form{
                 display: flex;
                 flex-direction: column;
+
+                    // .uploadImage{
+                    //     margin-bottom: 10px;
+                    // }
                 h1{
                     margin-bottom: 25px;
                     font-size: 2.5rem;
@@ -41,6 +45,7 @@
                     outline: 0;
                     border-bottom: 1px solid black;
                 }
+
                 button{
                     width: 100px;
                     margin: 15px 0;
@@ -49,6 +54,30 @@
                     color: white;
                     font-size: 1.2rem;
                 }
+                .categoryTitle{
+                    color:  black;
+                    opacity: 60%;
+                }
+                .category{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-evenly;
+                    margin: 5px 0;
+
+                    .categorySet{
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-evenly;
+                        margin: 0 5px;
+
+                        .categoryName{
+                            opacity: 60%;
+                            padding-top: 12px;
+                            margin: 0 4px;
+                        }
+                    }
+                }
+                
             }
         }
     }
