--- a/src/components/productPage/styles.module.scss
+++ b/src/components/productPage/styles.module.scss
@@ -131,4 +131,37 @@
             }
         }
     }
+    .modalWrapper{
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+
+         .modalBackdrop{
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            z-index: 100;
+            background-color: rgba(61,108,185 , 0.9);
+
+            .modalBox{
+                position: relative;
+                top: 50%;
+                left: 50%;
+                transform: translate( -50%, -50%);
+                width: 70%;
+                background-color: $accent_blue;
+                box-shadow: 0 0 10px rbga(0,0,0,0.25);
+                z-index: 101;
+
+                .modalImage{
+                    border-radius: 50%;
+                    width: 200px;
+                }
+            }
+         }
+    }
 }
