--- a/src/components/dashboard/styles.module.scss
+++ b/src/components/dashboard/styles.module.scss
@@ -94,53 +94,57 @@
             row-gap: 30px;
             column-gap: 10px;
 
-            .card{
-                width: 80%;
-                background-color: white;
-                padding: 50px 40px;
-                border-radius: 10px;
-                margin: 0 auto;
-                
-
-                .rowOne{
-                    display: flex;
-                    flex-direction: row;
-                    width: 100%;
-                    justify-content: space-between;
-
-                    .title{
-                        color: $purple;
-                        font-size: 2rem;
-                    }
-                    .icons{
+            a{
+                text-decoration: none;
+                color: black;
+                .card{
+                    width: 80%;
+                    background-color: white;
+                    padding: 50px 40px;
+                    border-radius: 10px;
+                    margin: 0 auto;
+                    
+    
+                    .rowOne{
                         display: flex;
                         flex-direction: row;
-                        justify-content: space-evenly;
-
-                        .icon{
-                            width: 25px;
-                            height: 25px;
-                            margin: 0 10px;
+                        width: 100%;
+                        justify-content: space-between;
+    
+                        .title{
+                            color: $purple;
+                            font-size: 2rem;
+                        }
+                        .icons{
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: space-evenly;
+    
+                            .icon{
+                                width: 25px;
+                                height: 25px;
+                                margin: 0 10px;
+                            }
                         }
                     }
-                }
-                .description{
-                    width: 90%;
-                    color: $purple;
-                    opacity: 85%;
-                    padding: 20px 0;
-                }
-                .rowTwo{
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-between;
-                    
-                    .price{
-                        font-size: 2rem;
-                        padding: 30px 0;
+                    .description{
+                        width: 90%;
+                        color: $purple;
+                        opacity: 85%;
+                        padding: 20px 0;
                     }
-                    .productImage{
-                        width: 300px;
+                    .rowTwo{
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        
+                        .price{
+                            font-size: 2rem;
+                            padding: 30px 0;
+                        }
+                        .productImage{
+                            width: 300px;
+                        }
                     }
                 }
             }
