--- a/src/components/UpdateProduct/styles.module.scss
+++ b/src/components/UpdateProduct/styles.module.scss
@@ -83,8 +83,12 @@
                     margin-bottom: 25px;
                     font-size: 2.5rem;
                 }
+                .label{
+                    opacity: 50%;
+                    font-size: 1rem;
+                }
                 input {
-                    margin: 13px 0;
+                    margin: 5px 0 13px 0;
                     border: 0;
                     outline: 0;
                     border-bottom: 1px solid black;
