--- a/src/components/productPage/styles.module.scss
+++ b/src/components/productPage/styles.module.scss
@@ -21,6 +21,10 @@
                 width: 80%;
                 letter-spacing: 2px;
             }
+            .category{
+                font-size: 1.4rem;
+                font-weight: 400;
+            }
             .priceRow{
                 display: flex;
                 flex-direction: row;
