--- a/src/components/productPage/styles.module.scss
+++ b/src/components/productPage/styles.module.scss
@@ -16,14 +16,68 @@
                 font-size: 3rem;
             }
             .productDescription{
+                margin-top: 10px;
                 font-weight: 500;
                 font-size: 1.5rem;
                 width: 80%;
                 letter-spacing: 2px;
             }
-            .category{
-                font-size: 1.4rem;
-                font-weight: 400;
+            
+          .rowValue{
+              display: flex;
+              margin-top: 10px;
+              
+            .catDiv{
+                margin-top: 5px;
+                background-color: $purple;
+                width: 100px;
+                text-align: center;
+                border-radius: 10px;
+                
+ 
+                .category{
+                 padding: 5px 0;
+                 font-size: 1.2rem;
+                 font-weight: 400;
+                 color: white;
+ 
+             }
+            }
+            .yearDiv{
+           
+                margin-left: 10px;
+                margin-top: 5px;
+                border: 3px solid $purple;
+                border-radius: 10px;
+                width: 100px;
+                display: flex;
+                flex-direction: row;
+                color: black;
+                
+                .yearDiv1{
+                 color: white;
+                 background-color: $purple;
+                 padding: 5px 7px;
+                }
+ 
+                .year{
+                 
+                 padding: 5px 5px;
+             }
+            }
+          }
+            .postedRow{
+                margin-top: 10px;
+                display: flex;
+                .dateHeading{
+                    font-size: 1.2rem;
+                }
+                .dateAdded{
+                    font-size: 1.1rem;
+                    color: #a3a1a1;
+                    padding-top: 2px;
+                    padding-left: 5px;
+                }
             }
             .priceRow{
                 display: flex;
@@ -55,7 +109,7 @@
                 margin-bottom: 100px;
 
                 .sellerTag{
-                    color: $accent_blue;
+                    color: white;
                     align-self: start;
                 }
                 
