--- a/src/components/StarRating/styles.module.scss
+++ b/src/components/StarRating/styles.module.scss
@@ -1,7 +1,12 @@
-.radio {
-    display: none;
-}
-.star{
-    cursor: pointer;
-    transition: color 200ms;
+.starReview{
+    margin: 80px auto;
+    text-align: center;
+    
+    .radio {
+        display: none;
+    }
+    .star{
+        cursor: pointer;
+        transition: color 200ms;
+    }
 }
