--- a/src/components/dashboard/styles.module.scss
+++ b/src/components/dashboard/styles.module.scss
@@ -156,6 +156,7 @@
                             }
                             .productImage{
                                 width: 300px;
+                                height: 300px;
                             }
                         }
                     }
