--- a/src/components/search/styles.module.scss
+++ b/src/components/search/styles.module.scss
@@ -42,6 +42,7 @@
                     .productImage{
                         margin: 20px 10px;
                         width: 300px;
+                        height: 275px;
                     }
                     .productTitle{
                         color: $purple;
