--- a/src/components/searchResult/styles.module.scss
+++ b/src/components/searchResult/styles.module.scss
@@ -46,6 +46,7 @@
                     .productImage{
                         margin: 20px 10px;
                         width: 300px;
+                        height: 275px;
                     }
                     .productTitle{
                         color: $purple;
