--- a/src/components/productPage/styles.module.scss
+++ b/src/components/productPage/styles.module.scss
@@ -168,6 +168,7 @@
                     width: 50%;
                     justify-content: baseline;
                     margin-top: 20px;
+                    cursor: pointer;
 
                     .contactIcon{
                         background-color: $accent_blue;
