--- a/src/components/signup/styles.module.scss
+++ b/src/components/signup/styles.module.scss
@@ -47,6 +47,12 @@
                     outline: 0;
                     border-bottom: 1px solid black;
                 }
+                input[type=email] {
+                    margin: 13px 0;
+                    border: 0;
+                    outline: 0;
+                    border-bottom: 1px solid black;
+                }
                 .upload{
                     opacity: 50%;
                     margin-bottom: 5px;
